--- a/tecrep.tex
+++ b/tecrep.tex
@@ -17,25 +17,23 @@
 \def\BibTeX{{\rmfamily B\kern-.05em{\scshape i\kern-.025em b}\kern-.08em
  T\kern-.1667em\lower.7ex\hbox{E}\kern-.125em X}}
 
-\jtitle{電子情報通信学会技術研究報告 \LaTeXe\ クラスファイルの使い方}
-\jsubtitle{技術研究報告原稿のための解説とテンプレート}
+\jtitle{初級学習者を対象としたアラビア語検索サイトの構築}
 \etitle{How to Use \LaTeXe\ Class File (\IEICEJcls\ version \IEICEJver) 
         for the Technical Report of the Institute of Electronics, Information 
         and Communication Engineers}
 \esubtitle{Guide to the Technical Report and Template}
 \authorlist{%
- \authorentry[hanako@denshi.ac.jp]{電子 花子}{Hanako DENSHI}{Tokyo}% 
- \authorentry[taro@jouhou.co.jp]{情報 太郎}{Jiro JOHO}{Osaka}% 
- \authorentry[jiro@jouhou.co.jp]{通信 次郎}{Ichiro TSHUSIN}{Osaka}% 
+ \authorentry[inoue.kai.n0@tufs.ac.jp]{井上 開}{Kai INOUE}{Tokyo}% 
+ \authorentry[sano@tufs.ac.jp]{佐野 洋}{Hiroshi SANO}{Tokyo}% 
 }
-\affiliate[Tokyo]{第一大学工学部\hskip1zw
-  〒105--0123 東京都港区山田1--2--3}
+\affiliate[Tokyo]{東京外国語大学言語文化学部\hskip1zw
+  〒183-8534 東京都府中市朝日町3-11-1}
  {Faculty of Engineering,
-  First University\hskip1em
+  Tokyo University of Foreign Studies\hskip1em
   Yamada 1--2--3, Minato-ku, Tokyo,
   105--0123 Japan}
-\affiliate[Osaka]{大阪株式会社開発部\hskip1zw
-  〒565--0456 大阪府吹田市河田4--5--6}
+\affiliate[Tokyo]{東京外国語大学大学院総合国際学研究院\hskip1zw
+  〒183-8534  東京都府中市朝日町3-11-1}
  {R\&D Division, Osaka Corporation\hskip1em
   Kawada 4--5--6, Suita-shi,
   565--0456 Japan}
@@ -68,36 +66,108 @@ p\LaTeXe\ class file, typesetting
 \end{ekeyword}
 \maketitle
 
-\section{まえがき}
+\section{はじめに}
+\subsection{背景}
 
-技術研究報告原稿を \IEICEJcls\ を利用して
-執筆する際に必要なことを解説します．
-{\bfseries \ref{sec:cls}} で本クラスファイル固有の使い方を，
-{\bfseries \ref{sec:typesetting}} で美しい組版を行うためのヒント
-ならびに長い数式を処理する際のヒントを，
-{\bfseries 付録}で PDF に書き出す場合の注意を説明します．
-%% ならびに \texttt{jis.tfm} の利用に関わること
+21世紀に入ってからのアラブ世界の動乱には, 日本においても多大な社会的関心が寄せられてきた. 2001年の「9. 11」, 2003年からの「イラク戦争」, 2010年からは「アラブの春」, 翌年には「シリア内戦」の勃発した. また「イスラム国」によるテロの脅威は現在も続いており, 2014年にはシリアのアレッポで日本人2名が拘束されるという事件があったことも記憶に新しい. 
+ 
+アラブ世界と日本との繋がりにおいては, 経済的な結びつきも無視することはできない. 原油のほとんどを輸入に頼っている日本だが, その輸入先第1位がサウジアラビア, 第2位がアラブ首長国連邦, 両国からの輸入量を合わせると実に全体の約6割 を占めることとなる. また日本企業の湾岸地域への進出も盛んである. 日本貿易振興機構が調査を始めた2005年から2014年の間に, アラブ首長国連邦にある日系企業拠点数は2倍以上 の431事業所にまで増加している. 2020年にはドバイでの万国博覧会の開催が決定しており, 湾岸地域はこれからますます経済的盛り上がりをみせると予想される. 
 
-原稿執筆上の注意事項は，
-「電子情報通信学会技術研究報告原稿の書き方」を参照してください．
-ここでは，本クラスファイルの使用にかかわる点のみを説明します．
+こういった時勢に反し, アラビア語を扱える人材の育成は進んでいない. 学習環境の整った教育機関はいまだ数が少なく, アラビア語を専門的に学習できる教育過程が存在している大学は, 東京外国語大学と大阪大学のみである. 
 
-レイアウトに関係するパラメータの変更などは行わないでください．
-また，文字や段落の位置調節を行うための \verb/\vspace/，
-\verb/\smallskip/，\verb/\medskip/，
-\verb/\hspace/ などのコマンドの使用は必要最少限にとどめ，
-\texttt{list} 環境のパラメータを変更することも避けてください．
+教育機関と同様に, アラビア語学習教材も量質ともに充実しているとは言い難い状況にある. 特に辞書においては顕著であり, 現在広く流通しているアラビア語日本語辞書は4冊程度しかない. しかし, それらも決して辞書として十分なものとは言えない. 本学アラビア語専攻で長らく英語訳辞書である「Arabic English Dictionary of Modern Written Arabic」の使用が推奨されてきたことも, このような事情を反映している.
 
-\section{クラスファイルの説明}
-\label{sec:cls}
+\subsection{アラビア語教育の現状}
+日本における専門としてのアラビア語教育は, 高等教育機関, 特に大学を中心として行われている. アラビア語の授業を提供している高等学校もあるが, その数は2016年度の調べにおいて全国で3校のみである.高等教育機関以外でもアラビア語の学習機会を提供する組織は数多く存在する。 サウジアラビア王国の支援で運営されている「アラブイスラーム学院」や, 朝日カルチャーセンターを始めとする市民講座、NHKによって放送されるテレビ及びラジオ講座などが代表的である. 本節ではこれらのうち、正規教育過程の授業が実施されている教育組織について考察する. 数値に関するデータについては, 鷲見朗子・鷲見克典「引用」から引用した. 
 
-\subsection{テンプレートと記述方法}
-\label{sec:technicalreport}
+アラビア語科目を提供する大学数は1997年度から2013年度にかけて1. 24倍に増加しており, 2014年度においてその数は全国で48となっている. しかし, これは全大学数に対する割合にして6パーセント程度に過ぎず, 他の国連公用語はおろか, ラテン語やイタリア語の科目を提供する大学数よりも少ない. 
 
+48の大学のうちアラビア語専攻のある大学は, 前述通り東京外国語大学と大阪大学のみである. 残りの46大学は一般学生に向けてアラビア科目を提供している. さらにこれらの大学が提供している授業科目のうち, 約8割が週1回の90分授業である. 残念ながら鷲見氏らによる調査では詳しい科目内容にまでは言及されていないが, 一般学生に向けて開講されていること, および週1回という頻度を考慮すると, 大学でアラビア語科目を受講する学生の多くが入門・初級レベルであることが推測される. 
+
+次に48大学を地域別にみると, 関東・近畿地方に40大学とそのほとんどが存在している. 北海道・東北地方に2大学, 中部地方に2大学, 中国地方に2大学, 九州地方に2大学で, 四国地方に限ってはアラビア語科目を提供する大学の数は0である. 大学全体が関東・近畿地方に集中していることを考慮に入れても, アラビア語科目を提供する大学の数は地域によってかなり偏りがあり, 地方在住者にとって, アラビア語を学習する機会は非常に限られていると言える. 
+
+以上のことから, 日本の大学でのアラビア語教育について2つのことがまとめられる. 
+
+アラビア語を提供する大学数はいまだ少なく, 地域によってかなり偏りがある. 
+多くの学生が入門・初級レベルにある可能性が高い. 
+
+こういった背景を考慮すると, 現状最も需要の高い学習教材は遠隔で利用可能な初級学習者向けのものではないかと考えられる. 初級学習者向けの学習教材は, まず大学でアラビア語科目を受講する学生からの需要があり, またアラビア語を学習できる環境が周囲になく, アラビア語を独学するひとの需要にも適う. このような需要は, 都市部よりも地方においてより顕著である可能性が高い.
+
+\subsection{初級学習者用辞書の必要性}
+本稿では, アラビア語学習教材の中でもとりわけ語彙学習に焦点を当てる. 汎用性が高く安価に入手できるアラビア語日本語辞書が存在しないが故に, 学習コストが非常に高くなっていることにある. 以下に現在おもに日本で流通している辞書についてまとめた. 収録語数, 配列, 例文の有無を記載してある. 「Arabic English Dictionary of Modern Written Arabic」（以下, ハンズウェア）のみ, 英語アラビア語辞書となっている.
+
+紙媒体の辞書で最もよく利用されるのが「Arabic English Dictionary of Modern Written Arabic」である. 英語訳辞書ではあるものの多くの語彙を網羅的に記載しており, アラビア語学習に必要不可欠な1冊である. しかしこの辞書も品詞や例文といった基本的な事項が記載されておらず, 至らない点も多い. またすでに絶版となることが決まっており, これから安定的に利用できる保証はない. ハンズウェア含め, 上記全ての辞書が5000円を越えており, 学習コストが非常に高い上, １冊で初級から上級まで使用できるものはなく, 学習を経るにつれ, 複数冊購入する必要性が生じてくる. また携帯性に優れないというデメリットも大きい. 
+
+初級者を対象としたものは, 「パスポート初級アラビア語辞典」だけである. これは初級者用辞書として優れているが, 紙媒体であるがゆえに2. 3節以降で詳しく述べる配列に関する問題を抱えている. 
+1. 2節でみたアラビア語教育の現状を考慮すれば, より安価で手軽に利用できる日本語アラビア語辞書をつくるは急務である. 
+\begin{table}[tb]
+\caption{アラビア語の辞書}
+\label{table:1}
+\ecaption{Arabic Dictionaries}
+\begin{center}
+ \begin{tabular}{c|c|c|c|c}
+   & 収録語数 & 配列 & 例文の有無 & 価格 \\
+ \hline
+  内記ら &0,000& 語根 & なし & 6,460円\\
+  内記ら &0,000&語根 & なし & 6,460円\\
+  内記ら &0,000& 語根 & なし & 6,460円\\
+  内記ら &0,000& 語根 & なし & 6,460円\\
+  内記ら &0,000& 語根 & なし & 6,460円\\
+   \hline
+ \end{tabular}
+\end{center}
+\end{table}
+
+\section{アラビア語について}
+\subsection{アラビア語の概要}
+アラビア語はエジプトやシリアをはじめ, 20以上の国および地域で公用語となっている. 話者総人口はおよそ3億人 にものぼると言われ, 6つある国連公用語の1つにも数えられる. またアラビア語はイスラム教の原典であるコーランの言語であり, 全世界およそ16億人 のイスラム教徒が存在することを考慮に入れると, 実に世界人口の5人に1人がアラビア語と関わりを持っていることとなる. 
+
+アラビア語は, アフロ・アジア語族のセム語派に属する屈折語である. 文字はアラビア文字を用い, 右から左に向かって記述する一方, 数字は逆に右から左に記述される. 28の子音が存在し, 中でも咽頭化ないし軟口蓋音化した子音が特徴的である. 母音は/a/, /i/, /u/の短母音とそれぞれの長母音、また/ai/, /au/などの二重母音が弁別される. 文構造はVSO型が基本だが, SVO型を取ることも多い. 名詞と形容詞は格（主格, 属格, 体格）・性（男性, 女性）・数（単数, 双数, 複数）によって変化し、定冠詞によって限定と非限定が区別される。また複数形には規則形が存在するが, 不規則変化するものが多数である. 動詞は人称（一人称, 二人称, 三人称）・性・数, および完了ないし非完了によって変化する. 三人称男性単数完了形は基本形と呼ばれ, 辞書の見出し語となっている.
+
+またアラビア語はコーランや古典文学を基盤とし, 現在では新聞やニュースなどで用いられる正則アラビア語（フスハー）と, 各地域で日常会話において用いられる口語アラビア語（アンミーヤ）に大別される. 正則アラビア語はアラブ世界での共通語として認識されているが, どこかの国および地域における母語というわけではなく, アラビア語母語話者自体も主に公教育の場で学ぶものである. つまり, 教育を受けたアラブ人は, 自身の生まれた土地で話される口語アラビア語と, 学校で学んだ正則アラビア語の両方を理解している. このよう状態は, 二重言語性と呼ばれる. 現在の日本におけるアラビア語教育は正則アラビア語が主であるため, 本論で目的とした検索サイトの構築も正則アラビア語を対象としている. 本稿で「アラビア語」は, 「正則アラビア語」のことを指す. 
+
+\subsection{アラビア語の語根}
+アラビア語のほとんどの語彙は, 3つの子音から成り立っている. 3つの子音の組み合わせはそれぞれに根源的な意味を持っており, 同じ3つの子音から成る語彙は意味に関連性を持っている. この3つの子音の組み合わせのことを「語根」という. 
+
+例えば, 「KāTiB」は「作家」を意味し, 「KiTāB」は「本」を意味する. 両単語の語根は「KTB」であり, これは「書くこと」にまつわる語根である. ここで注意したいのは, 語根はその並べ方まで含めたものであり, 語根「KTB」は, 「BKT」や「KBT」 とは異なるということだ. 厳密に言えば, 3子音の組み合わせではなく, 3子音の順列であると言える. また稀に2子音や4子音の語根も存在する. 
+
+\subsection{辞書作成時の問題点}
+\subsubsection{語根配列}
+伝統的にアラビア語の辞書では, 語根配列が採用されてきた. 上記の例で言えば, 「KāTiB」と「KiTāB」はともに辞書の「KTB」のグループにまとめられ, その見出し語として収録される. 今まで五十音順の日本語辞書, アルファベット順の英語辞書しか使ったことのない学生にとって, 語根配列のアラビア語辞書に慣れるまでにはかなりの時間がかかる. 語根配列の辞書を使用するためには, 調べたいと思っている単語の語根を判別する必要性があるからだ. この作業にはそれ相応の文法力が必要とされる. 
+
+「maKTaBat」を辞書で引く場合, 「m」と「t」がそれぞれ語根ではなく, 派生語を作るための接辞であると見抜けなければならない. これは簡単な例であるが, 語根の中には派生された語彙において子音の一部が脱落したり, 変化したりするものがある. これらは例外として扱われるが, 例外ほど使用頻度が高いのというのが言語の常であり, アラビア語学習において骨の折れる部分である. 
+
+「NWM」は「寝る」に関わる語根だが, これが派生した動詞「NāMa」では第二子音「W」が長母音化し, 名詞「NiyāM」では同じく第二子音「W」が「Y」に変化している. これらの例のように, 一見しただけでは語根の判別が難しい語彙も多い. こういった場合, 語根配列の辞書を引くことは格段に難しくなる. 特に文法力がまだ十分に備わっていない初級学習者は, 単語の意味を調べることさえできないという状態に陥る. これが語根配列の辞書を使用する際の大きなデメリットである. 
+しかし, 逆に語根を正しく判別するだけの文法力さえあれば, 同じ語根から派生された語彙群を一覧することができるというメリットもある.  「KTB」を引けば, 「作家」, 「本」, 「図書館」という語彙を同時に知ることができる. また動詞の活用形や名詞・形容詞の複数形から辞書を引くことも可能である. 
+
+語根配列の辞書であれば, 「KuTTāBun」が「KāTiBun」の複数形 であると知らなくとも, 語根が「KTB」であるということさえわかれば, 辞書を引いて意味を知ることできる. 「KuTuB」に関しても同様であり, これらの語彙はいずれも語根に対して母音が付加されているだけなので, 語根の判別は難しくない. それゆえ語根配列の辞書であれば, たとえこれらの語彙が初見であったとしても辞書を引くことは十分に可能である. 
 以下のテンプレートに従って記述してください．
 原稿執筆に際しては，本クラスファイルとともに配布される
-テンプレート（\texttt{template.tex}）を利用できます．
 
+\subsubsection{アフベット配列}
+語根配列の辞書がある一方で, 英語やフランス語などの辞書で採用されているアルファベット配列の辞書も存在する. こちらの場合, 調べたい語彙の語根を判別できる文法能力は必要とならないため, 初級学習者にとっては使い勝手がよいというメリットがある. 「NWM」のように派生語において語根の一部が, 欠落および変化してしまう語彙も, 単純にそのままの形で調べれば良いだけである. しかし一点注意しなければいけないことがある. 動詞は基本形, 名詞・形容詞は単数形が見出し語となっているため, 調べたい語彙が動詞の活用形だった場合や, 名詞・形容詞の複数形だった場合, それらを基本形ないし単数形に戻す文法力が必要であるということだ. 
+
+上記の例であれば, 「KuTTāB」は「KāTiB」に, 「KuTuB」は「KiTāB」に戻さなければ辞書を引くことはできない. 複数形が規則変化するものである場合, 複数形から単数形を復元することはさして難しくないため, アルファベット配列の辞書ですぐに調べることができる. しかし例に挙げた名詞のように複数形が不規則変化するものの場合, 辞書を引くのは当然それらが学習者にとって初見の時であるため, 複数形から単数形を復元するのは不可能に近く, 辞書を引くことは難しくなる. このような場合には, むしろ語根辞書の方が意味を調べることに適しているといえる. 
+
+\subsubsection{辞書配列の検討}
+語根配列の辞書とアルファベット配列の辞書にはそれぞれに長所と短所があり, 目的や状況に応じて使い分けることが理想的である. 紙の辞書ではどちらか一方の配列しか採用できないため, 2冊必要となってしまう. 他方, 電子媒体の辞書であれば両方を採用することができる. しかしどちらも利用できるということは, 同時にどちらか一方のみを利用し続けることを可能にしてしまう. アルファベット配列のみを利用し続けることは, 学習者の文法力養成の妨げとなる可能性も高い. アラビア語辞書において伝統的に語根配列が採用されてきたことは, 語根に対する理解がアラビア語学習において非常に重要であるからに他ならない. 
+
+しかし榮谷 [2]も指摘するように, あまりに語根を偏重すれば, 辞書を引く能力を養うのと引き換えに, かえって語彙を覚える時間が取れないといった本末転倒な事態を招きかねない. アルファベット配列のように, 辞書の見出し語から語彙を調べられることは初級学習者にとって利便性が高い. 本研究で構築する検索サイトの対象は初級学習者であるため, アルファベット配列を採用することに関しては問題ないだろう. しかし, 関連する語彙が一覧できるなど語根配列によって得られるメリットも多い. 事実, 次章の学生アンケートの結果からもわかるように, 8割近い学生が語根配列の必要性を感じている. 初級学習者であっても目的に応じて使い分けられるよう, 検索サイトでは見出し語検索と語根検索の両方を採用することとした. 同時に収録語彙数に制限を設けた. これは初級学習者が見出し語検索を過度に利用するあまり, 語根に対する理解力をいつまでも身につけられずに学習が進んで行くことを避けるためである. 初級段階の学習を終えた後は, 既存の辞書へ利用を移行して行くことを想定している. 
+
+\section{検索サイト概要}
+\subsection{要求仕様}
+\subsection{収録語数}
+2. 3. 3項で, 検索サイトの配列を検討し, さらに語彙に制限を設けることとした. ここでは初学者向けの検索サイトとしてどれだけの語彙を収録すべきか検討する.
+
+\subsubsection{語彙の大きさ}
+第二言語習得においてどれだけの語彙量を目標にすべきかに関して, Nation [3]は語彙の頻度に注目することを1つの方法として挙げている. 彼は英語ネイティブスピーカーの中等学校教科書を例に, 最も頻度の高い2000語でテキストの87%, さらにUniversity word list を加えた2800語でテキストの95%をカバーしていると示している. この結果は英語に限られるものであり, 他言語にも同じように頻度とテキストカバー率の関係を当てはめて考えることは軽率と言わざるを得ない. 
+
+しかしTim Buckwalter・Dilworth Parkinson [4]が, 語彙学習において頻度を1つの指標とした際, 多くの場合学習者の利益となる語彙表を得られると述べているように, 頻度が重要な指標となることは間違いない. とりわけ「初級学習者がまず学ぶべき語彙を提示する」という条件のもとでは, 非常に効果的だと考えられる.
+
+本検索サイトでは, 見出し語として2000語を収録語彙数の指標とした. Nationが最も高頻度の語彙として2000語を区切りにしていることに加え, 東京外国語大学で利用される教科書2冊が初級学習者の幅広い利用を想定してつくられており, 合わせて約2000語を収録していることも根拠となっている.
+
+\subsubsection{辞書データ}
+辞書データは「大学のアラビア語 初級表現」, 巻末収録の単語帳の2081単語を基礎としている. 本学アラビア語専攻の教授陣が2013年度以降出版している「大学のアラビア語」シリーズは, 東京外国語大学で培われてきたアラビア語教育の集大成とも言えるものであり, 教科書としての質が高い. これらのテキストにある語彙を集めた単語帳は, 日本語の意味も入念に選別されている. これらの語彙と, 3000万語規模のコーパスから頻度上位5000語を抽出した「a frequency dictionary of Arabic」の上位2000語を照らし合わせ, 前者には含まれないが後者には含まれる818語を追加した, 全2909語を見出し語として収録している. 2081語から漏れた語彙に関しては「パスポート初級アラビア語辞典」および「Arabic English Dictionary of Modern Written Arabic」を参照した. 例文およびコロケーションに関しては, 「TUFS言語モジュール 」にアップロードされている約2000文を収録した.
 \begin{verbatim}
 \documentclass[technicalreport]{ieicej}
 \jtitle{和文題目}
