--- a/tecrep.tex
+++ b/tecrep.tex
@@ -108,11 +108,11 @@ p\LaTeXe\ class file, typesetting
  \begin{tabular}{c|c|c|c|c}
    & 収録語数 & 配列 & 例文の有無 & 価格 \\
  \hline
-  内記ら &0,000& 語根 & なし & 6,460円\\
-  内記ら &0,000&語根 & なし & 6,460円\\
-  内記ら &0,000& 語根 & なし & 6,460円\\
-  内記ら &0,000& 語根 & なし & 6,460円\\
-  内記ら &0,000& 語根 & なし & 6,460円\\
+  内記ら &12,000& 語根 & なし & 6,480円\\
+  内記ら &24,000&語根 & なし & 5,184円\\
+  内記ら &12,000& 語根 & なし & 7,228円\\
+  内記ら &4,200& アルファベット & あり & 5,076円\\
+  内記ら &10,000& アルファベット & あり & 10,800円\\
    \hline
  \end{tabular}
 \end{center}
