--- a/tecrep.tex
+++ b/tecrep.tex
@@ -18,10 +18,7 @@
  T\kern-.1667em\lower.7ex\hbox{E}\kern-.125em X}}
 
 \jtitle{初級学習者を対象としたアラビア語検索サイトの構築}
-\etitle{How to Use \LaTeXe\ Class File (\IEICEJcls\ version \IEICEJver) 
-        for the Technical Report of the Institute of Electronics, Information 
-        and Communication Engineers}
-\esubtitle{Guide to the Technical Report and Template}
+\etitle{Construction of an Arabic searching website for beginner-level learners}
 \authorlist{%
  \authorentry[inoue.kai.n0@tufs.ac.jp]{井上 開}{Kai INOUE}{Tokyo}% 
  \authorentry[sano@tufs.ac.jp]{佐野 洋}{Hiroshi SANO}{Tokyo}% 
@@ -43,23 +40,22 @@
 
 \begin{document}
 \begin{jabstract}
-電子情報通信学会技術研究報告原稿用の p\LaTeXe\ クラスファイル，
-\IEICEJcls{}（\texttt{version \IEICEJver}）の使い方を説明します．
-本クラスファイルに基づく記述の仕方，クラスファイル使用上の注意点，
-ならびにタイピングの際の注意事項を説明します．
-本クラスファイルは，アスキー版 p\LaTeXe\ に基づいて作成しています．
+アラビア語は国連公用語の1つであり, 全世界に3億人近い話者がいるといわれる. 日本ではまだまだ馴染みの薄いアラビア語だが, アラブ世界への社会的, 経済的関心は着実に高まってきている. これに合わせ, 日本でのアラビア語学習環境の整備を進めていくことは必須である. 
+
+このような背景を踏まえ, 筆者はアラビア語学習教材の作成に着手した. 本稿では, 初級学習者を対象としたアラビア語検索サイト構築にいたる過程について説明する. 初級学習者を対象としたのには, 2つの理由が挙げられる. 第一に, アラビア語学習者の一人として, 教材の不足が理由で著者自身が学習初期に非常に苦労したこと. 第二に, 日本におけるアラビア語学習者の大半が初級レベルにあることである. 
+
+検索サイトは, 電子媒体特有の機能を備えている. それは, アルファベット配列と語根配列の両立である. アラビア語の辞書は伝統的に語根配列が採用されてきたが, 初級学習者には使いこなすのが難しい. 同時に, 語根配列によるメリットも数多く存在する. 紙媒体の辞書では二つの配列を同時には採用できないというジレンマを, 電子媒体で辞書をつくることで解消している.
 \end{jabstract}
 \begin{jkeyword}
-アスキー版p\LaTeXe{}，タイピングの注意事項
+アラビア語
 \end{jkeyword}
 \begin{eabstract}
-IEICE (the Institute of Electronics, Information 
-and Communication Engineers) provides 
-a p\LaTeXe\ class file, named \IEICEJcls\ (ver.\,\IEICEJver), 
-for the Technical Report of IEICE. 
-This document describes how to use the class file, 
-and also makes some remarks about typesetting a document by using p\LaTeXe. 
-The design is based on ASCII Japanese p\LaTeXe. 
+Arabic is one of the official languages of the United Nations, and it is said that there are nearly 300 million Arabic speakers all over the world.  Although Arabic is still unfamiliar here in Japan, social and economic interest to the Arabic world has been steadily increasing in recent years.  In according with this situation, it is essential to promote a development of Arabic learning environment in Japan.
+
+Based on the above, I started to prepare an Arabic learning material.  In this paper, I will explain a process of how I got on to build an Arabic searching website for beginner-level learners.  There are two reasons why I targeted beginners.  First of all, as one of Arabic learners, my own difficulty in the beginning was due to the lack of teaching materials.  Secondly, most Arabic learners in Japan are at the beginner-level.
+
+The searching website has a function characteristic of an electric medium.  It is a compatibility between an alphabet sequence and a root sequence.  An Arabic dictionary traditionally adopted the root sequence, but it is difficult for beginner-lever learners to use.  At the same time, there are some merits to adopt the root sequence.  By making a dictionary in an electric media, I eliminated this dilemma that we cannot adopt these two sequences at the same time.
+
 \end{eabstract}
 \begin{ekeyword}
 p\LaTeXe\ class file, typesetting
@@ -71,52 +67,20 @@ p\LaTeXe\ class file, typesetting
 
 21世紀に入ってからのアラブ世界の動乱には, 日本においても多大な社会的関心が寄せられてきた. 2001年の「9. 11」, 2003年からの「イラク戦争」, 2010年からは「アラブの春」, 翌年には「シリア内戦」の勃発した. また「イスラム国」によるテロの脅威は現在も続いており, 2014年にはシリアのアレッポで日本人2名が拘束されるという事件があったことも記憶に新しい. 
  
-アラブ世界と日本との繋がりにおいては, 経済的な結びつきも無視することはできない. 原油のほとんどを輸入に頼っている日本だが, その輸入先第1位がサウジアラビア, 第2位がアラブ首長国連邦, 両国からの輸入量を合わせると実に全体の約6割 を占めることとなる. また日本企業の湾岸地域への進出も盛んである. 日本貿易振興機構が調査を始めた2005年から2014年の間に, アラブ首長国連邦にある日系企業拠点数は2倍以上 の431事業所にまで増加している. 2020年にはドバイでの万国博覧会の開催が決定しており, 湾岸地域はこれからますます経済的盛り上がりをみせると予想される. 
+アラブ世界と日本との繋がりにおいては, 経済的な結びつきも無視することはできない. 原油のほとんどを輸入に頼っている日本だが, その輸入先第1位がサウジアラビア, 第2位がアラブ首長国連邦, 両国からの輸入量を合わせると実に全体の約6割\footnote{帝国書院　https://www.teikokushoin.co.jp/statistics/map/index16.html}を占めることとなる. また日本企業の湾岸地域への進出も盛んである. 日本貿易振興機構が調査を始めた2005年から2014年の間に, アラブ首長国連邦にある日系企業拠点数は2倍以上の431事業所にまで増加している. 2020年にはドバイでの万国博覧会の開催が決定しており, 湾岸地域はこれからますます経済的盛り上がりをみせると予想される. 
 
-こういった時勢に反し, アラビア語を扱える人材の育成は進んでいない. 学習環境の整った教育機関はいまだ数が少なく, アラビア語を専門的に学習できる教育過程が存在している大学は, 東京外国語大学と大阪大学のみである. 
+このようなアラブ圏の社会的および経済的関心の高まりを反映し,東京外国は2012年にアラビア語専攻の学生の募集定員を15名から30名へと増やした. また防衛省において2011年よりアラビア語圏への留学派遣が開始されたことも、同様の事情からと推測される. アラビア語を扱える人材の育成は進んでいない. 学習環境の整った教育機関はいまだ数が少なく, アラビア語を専門的に学習できる教育過程が存在している大学は, 東京外国語大学と大阪大学のみである. 
 
 教育機関と同様に, アラビア語学習教材も量質ともに充実しているとは言い難い状況にある. 特に辞書においては顕著であり, 現在広く流通しているアラビア語日本語辞書は4冊程度しかない. しかし, それらも決して辞書として十分なものとは言えない. 本学アラビア語専攻で長らく英語訳辞書である「Arabic English Dictionary of Modern Written Arabic」の使用が推奨されてきたことも, このような事情を反映している.
 
 \subsection{アラビア語教育の現状}
-日本における専門としてのアラビア語教育は, 高等教育機関, 特に大学を中心として行われている. アラビア語の授業を提供している高等学校もあるが, その数は2016年度の調べにおいて全国で3校のみである.高等教育機関以外でもアラビア語の学習機会を提供する組織は数多く存在する。 サウジアラビア王国の支援で運営されている「アラブイスラーム学院」や, 朝日カルチャーセンターを始めとする市民講座、NHKによって放送されるテレビ及びラジオ講座などが代表的である. 本節ではこれらのうち、正規教育過程の授業が実施されている教育組織について考察する. 数値に関するデータについては, 鷲見朗子・鷲見克典「引用」から引用した. 
+鷲見榮谷\cite{washimi2016}らの報告によると、大学でアラビア語を学習する学生のほとんどは入門・初級レベルにある。こうのような背景を考慮すると, 現状最も需要の高い学習教材は遠隔で利用可能な初級学習者向けのものではないかと考えられる. 初級学習者向けの学習教材は, まず大学でアラビア語科目を受講する学生からの需要があり, またアラビア語を学習できる環境が周囲になく, アラビア語を独学するひとの需要にも適う.
 
-アラビア語科目を提供する大学数は1997年度から2013年度にかけて1. 24倍に増加しており, 2014年度においてその数は全国で48となっている. しかし, これは全大学数に対する割合にして6パーセント程度に過ぎず, 他の国連公用語はおろか, ラテン語やイタリア語の科目を提供する大学数よりも少ない. 
-
-48の大学のうちアラビア語専攻のある大学は, 前述通り東京外国語大学と大阪大学のみである. 残りの46大学は一般学生に向けてアラビア科目を提供している. さらにこれらの大学が提供している授業科目のうち, 約8割が週1回の90分授業である. 残念ながら鷲見氏らによる調査では詳しい科目内容にまでは言及されていないが, 一般学生に向けて開講されていること, および週1回という頻度を考慮すると, 大学でアラビア語科目を受講する学生の多くが入門・初級レベルであることが推測される. 
-
-次に48大学を地域別にみると, 関東・近畿地方に40大学とそのほとんどが存在している. 北海道・東北地方に2大学, 中部地方に2大学, 中国地方に2大学, 九州地方に2大学で, 四国地方に限ってはアラビア語科目を提供する大学の数は0である. 大学全体が関東・近畿地方に集中していることを考慮に入れても, アラビア語科目を提供する大学の数は地域によってかなり偏りがあり, 地方在住者にとって, アラビア語を学習する機会は非常に限られていると言える. 
-
-以上のことから, 日本の大学でのアラビア語教育について2つのことがまとめられる. 
-
-アラビア語を提供する大学数はいまだ少なく, 地域によってかなり偏りがある. 
-多くの学生が入門・初級レベルにある可能性が高い. 
-
-こういった背景を考慮すると, 現状最も需要の高い学習教材は遠隔で利用可能な初級学習者向けのものではないかと考えられる. 初級学習者向けの学習教材は, まず大学でアラビア語科目を受講する学生からの需要があり, またアラビア語を学習できる環境が周囲になく, アラビア語を独学するひとの需要にも適う. このような需要は, 都市部よりも地方においてより顕著である可能性が高い.
-
-\subsection{初級学習者用辞書の必要性}
-本稿では, アラビア語学習教材の中でもとりわけ語彙学習に焦点を当てる. 汎用性が高く安価に入手できるアラビア語日本語辞書が存在しないが故に, 学習コストが非常に高くなっていることにある. 以下に現在おもに日本で流通している辞書についてまとめた. 収録語数, 配列, 例文の有無を記載してある. 「Arabic English Dictionary of Modern Written Arabic」（以下, ハンズウェア）のみ, 英語アラビア語辞書となっている.
-
-紙媒体の辞書で最もよく利用されるのが「Arabic English Dictionary of Modern Written Arabic」である. 英語訳辞書ではあるものの多くの語彙を網羅的に記載しており, アラビア語学習に必要不可欠な1冊である. しかしこの辞書も品詞や例文といった基本的な事項が記載されておらず, 至らない点も多い. またすでに絶版となることが決まっており, これから安定的に利用できる保証はない. ハンズウェア含め, 上記全ての辞書が5000円を越えており, 学習コストが非常に高い上, １冊で初級から上級まで使用できるものはなく, 学習を経るにつれ, 複数冊購入する必要性が生じてくる. また携帯性に優れないというデメリットも大きい. 
-
-初級者を対象としたものは, 「パスポート初級アラビア語辞典」だけである. これは初級者用辞書として優れているが, 紙媒体であるがゆえに2. 3節以降で詳しく述べる配列に関する問題を抱えている. 
+\subsection{初級学習者用辞書}
+本稿では, アラビア語学習教材の中でもとりわけ語彙学習に焦点を当てる. 初級学習者用を銘打っているアラビア語日本語辞書としては、「パスポート初級アラビア語辞典」がのみが存在している。しかし、紙媒体であるために2. 3節以降で詳しく述べる配列に関する問題を抱えている.
 1. 2節でみたアラビア語教育の現状を考慮すれば, より安価で手軽に利用できる日本語アラビア語辞書をつくるは急務である. 
-\begin{table}[tb]
-\caption{アラビア語の辞書}
-\label{table:1}
-\ecaption{Arabic Dictionaries}
-\begin{center}
- \begin{tabular}{c|c|c|c|c}
-   & 収録語数 & 配列 & 例文の有無 & 価格 \\
- \hline
-  内記ら &12,000& 語根 & なし & 6,480円\\
-  内記ら &24,000&語根 & なし & 5,184円\\
-  内記ら &12,000& 語根 & なし & 7,228円\\
-  内記ら &4,200& アルファベット & あり & 5,076円\\
-  内記ら &10,000& アルファベット & あり & 10,800円\\
-   \hline
- \end{tabular}
-\end{center}
-\end{table}
+
+\subsection{目的}
 
 \section{アラビア語について}
 \subsection{アラビア語の概要}
@@ -152,7 +116,7 @@ p\LaTeXe\ class file, typesetting
 \subsubsection{辞書配列の検討}
 語根配列の辞書とアルファベット配列の辞書にはそれぞれに長所と短所があり, 目的や状況に応じて使い分けることが理想的である. 紙の辞書ではどちらか一方の配列しか採用できないため, 2冊必要となってしまう. 他方, 電子媒体の辞書であれば両方を採用することができる. しかしどちらも利用できるということは, 同時にどちらか一方のみを利用し続けることを可能にしてしまう. アルファベット配列のみを利用し続けることは, 学習者の文法力養成の妨げとなる可能性も高い. アラビア語辞書において伝統的に語根配列が採用されてきたことは, 語根に対する理解がアラビア語学習において非常に重要であるからに他ならない. 
 
-しかし榮谷 [2]も指摘するように, あまりに語根を偏重すれば, 辞書を引く能力を養うのと引き換えに, かえって語彙を覚える時間が取れないといった本末転倒な事態を招きかねない. アルファベット配列のように, 辞書の見出し語から語彙を調べられることは初級学習者にとって利便性が高い. 本研究で構築する検索サイトの対象は初級学習者であるため, アルファベット配列を採用することに関しては問題ないだろう. しかし, 関連する語彙が一覧できるなど語根配列によって得られるメリットも多い. 事実, 次章の学生アンケートの結果からもわかるように, 8割近い学生が語根配列の必要性を感じている. 初級学習者であっても目的に応じて使い分けられるよう, 検索サイトでは見出し語検索と語根検索の両方を採用することとした. 同時に収録語彙数に制限を設けた. これは初級学習者が見出し語検索を過度に利用するあまり, 語根に対する理解力をいつまでも身につけられずに学習が進んで行くことを避けるためである. 初級段階の学習を終えた後は, 既存の辞書へ利用を移行して行くことを想定している. 
+しかし榮谷\cite{sakaedani2008}も指摘するように, あまりに語根を偏重すれば, 辞書を引く能力を養うのと引き換えに, かえって語彙を覚える時間が取れないといった本末転倒な事態を招きかねない. アルファベット配列のように, 辞書の見出し語から語彙を調べられることは初級学習者にとって利便性が高い. 本研究で構築する検索サイトの対象は初級学習者であるため, アルファベット配列を採用することに関しては問題ないだろう. しかし, 関連する語彙が一覧できるなど語根配列によって得られるメリットも多い. 事実, 次章の学生アンケートの結果からもわかるように, 8割近い学生が語根配列の必要性を感じている. 初級学習者であっても目的に応じて使い分けられるよう, 検索サイトでは見出し語検索と語根検索の両方を採用することとした. 同時に収録語彙数に制限を設けた. これは初級学習者が見出し語検索を過度に利用するあまり, 語根に対する理解力をいつまでも身につけられずに学習が進んで行くことを避けるためである. 初級段階の学習を終えた後は, 既存の辞書へ利用を移行して行くことを想定している. 
 
 \section{検索サイト概要}
 \subsection{要求仕様}
@@ -183,5 +147,3 @@ I.S.P.Nation, Teaching and Learning Vocabulary, Heinle\&Heinle, 1990.
 Tim Buckwalter  Parkinson Dilworth, A Frequency Dictionary of Arabic: Core Vocabulary for Learners, Routledge, 2009.
 
 \end{thebibliography}
-
-\end{document}
