--- a/tecrep.tex
+++ b/tecrep.tex
@@ -63,40 +63,40 @@ p\LaTeXe\ class file, typesetting
 \maketitle
 
 \section{はじめに}
-\subsection{背景}
+アラビア語は, 西アジアから北アフリカを中心に20以上の国および地域で話される言葉である. その形態論的特徴として, 3子音を語根としていることが挙げられる. 語根自体がそのまま語彙となることはないが, それぞれに基本的な意味が備わっている. アラビア語の語彙は, 語根に母音や接辞を付加することによって派生され, 同じ語彙から派生された語彙は意味に関連性を持っている.
 
-21世紀に入ってからのアラブ世界の動乱には, 日本においても多大な社会的関心が寄せられてきた. 2001年の「9. 11」, 2003年からの「イラク戦争」, 2010年からは「アラブの春」, 翌年には「シリア内戦」の勃発した. また「イスラム国」によるテロの脅威は現在も続いており, 2014年にはシリアのアレッポで日本人2名が拘束されるという事件があったことも記憶に新しい. 
- 
-アラブ世界と日本との繋がりにおいては, 経済的な結びつきも無視することはできない. 原油のほとんどを輸入に頼っている日本だが, その輸入先第1位がサウジアラビア, 第2位がアラブ首長国連邦, 両国からの輸入量を合わせると実に全体の約6割\footnote{帝国書院　https://www.teikokushoin.co.jp/statistics/map/index16.html}を占めることとなる. また日本企業の湾岸地域への進出も盛んである. 日本貿易振興機構が調査を始めた2005年から2014年の間に, アラブ首長国連邦にある日系企業拠点数は2倍以上の431事業所にまで増加している. 2020年にはドバイでの万国博覧会の開催が決定しており, 湾岸地域はこれからますます経済的盛り上がりをみせると予想される. 
+KTB：書くことにまつわる語根
 
-このようなアラブ圏の社会的および経済的関心の高まりを反映し,東京外国は2012年にアラビア語専攻の学生の募集定員を15名から30名へと増やした. また防衛省において2011年よりアラビア語圏への留学派遣が開始されたことも、同様の事情からと推測される. アラビア語を扱える人材の育成は進んでいない. 学習環境の整った教育機関はいまだ数が少なく, アラビア語を専門的に学習できる教育過程が存在している大学は, 東京外国語大学と大阪大学のみである. 
+KaTibun：作家
+
+一方で, 近年日本においてもアラブ世界に対しては多大なる社会的関心が寄せられてきた. 2001年の「9. 11」, 2003年からの「イラク戦争」, 2010年からは「アラブの春」, 翌年には「シリア内戦」の勃発, また「イスラム国」によるテロの脅威は現在も続いており, 2014年にはシリアのアレッポで日本人2名が拘束されるという事件があったことも記憶に新しい. またアラブ世界との経済的結びつきも無視するとはできない。原油のほとんどを輸入に頼っている日本だが, その輸入先第1位がサウジアラビア, 第2位がアラブ首長国連邦, 両国からの輸入量を合わせると実に全体の約6割\footnote{帝国書院　https://www.teikokushoin.co.jp/statistics/map/index16.html}を占めることとなる. また日本企業の湾岸地域への進出も盛んである. 日本貿易振興機構が調査を始めた2005年から2014年の間に, アラブ首長国連邦にある日系企業拠点数は2倍以上の431事業所にまで増加している. 2020年にはドバイでの万国博覧会の開催が決定しており, 湾岸地域はこれからますます経済的盛り上がりをみせると予想される. 
+
+このような事情を反映し, 日本でのアラビア語の学習需要も高まりつつある. 東京外国語大学では, 2012年にアラビア語専攻の学生の募集定員が15名から30名へと増加した. また防衛省において2011年よりアラビア語圏への留学派遣が開始されたことも、同様の事情からと推測される. アラビア語を扱える人材の育成は進んでいない. 学習環境の整った教育機関はいまだ数が少なく, アラビア語を専門的に学習できる教育過程が存在している大学は, 東京外国語大学と大阪大学のみである. 
 
 教育機関と同様に, アラビア語学習教材も量質ともに充実しているとは言い難い状況にある. 特に辞書においては顕著であり, 現在広く流通しているアラビア語日本語辞書は4冊程度しかない. しかし, それらも決して辞書として十分なものとは言えない. 本学アラビア語専攻で長らく英語訳辞書である「Arabic English Dictionary of Modern Written Arabic」の使用が推奨されてきたことも, このような事情を反映している.
 
-\subsection{アラビア語教育の現状}
 鷲見榮谷\cite{washimi2016}らの報告によると、大学でアラビア語を学習する学生のほとんどは入門・初級レベルにある。こうのような背景を考慮すると, 現状最も需要の高い学習教材は遠隔で利用可能な初級学習者向けのものではないかと考えられる. 初級学習者向けの学習教材は, まず大学でアラビア語科目を受講する学生からの需要があり, またアラビア語を学習できる環境が周囲になく, アラビア語を独学するひとの需要にも適う.
 
-\subsection{初級学習者用辞書}
 本稿では, アラビア語学習教材の中でもとりわけ語彙学習に焦点を当てる. 初級学習者用を銘打っているアラビア語日本語辞書としては、「パスポート初級アラビア語辞典」がのみが存在している。しかし、紙媒体であるために2. 3節以降で詳しく述べる配列に関する問題を抱えている.
 1. 2節でみたアラビア語教育の現状を考慮すれば, より安価で手軽に利用できる日本語アラビア語辞書をつくるは急務である. 
 
-\subsection{目的}
-
 \section{アラビア語について}
-\subsection{アラビア語の概要}
-アラビア語はエジプトやシリアをはじめ, 20以上の国および地域で公用語となっている. 話者総人口はおよそ3億人 にものぼると言われ, 6つある国連公用語の1つにも数えられる. またアラビア語はイスラム教の原典であるコーランの言語であり, 全世界およそ16億人 のイスラム教徒が存在することを考慮に入れると, 実に世界人口の5人に1人がアラビア語と関わりを持っていることとなる. 
-
-アラビア語は, アフロ・アジア語族のセム語派に属する屈折語である. 文字はアラビア文字を用い, 右から左に向かって記述する一方, 数字は逆に右から左に記述される. 28の子音が存在し, 中でも咽頭化ないし軟口蓋音化した子音が特徴的である. 母音は/a/, /i/, /u/の短母音とそれぞれの長母音、また/ai/, /au/などの二重母音が弁別される. 文構造はVSO型が基本だが, SVO型を取ることも多い. 名詞と形容詞は格（主格, 属格, 体格）・性（男性, 女性）・数（単数, 双数, 複数）によって変化し、定冠詞によって限定と非限定が区別される。また複数形には規則形が存在するが, 不規則変化するものが多数である. 動詞は人称（一人称, 二人称, 三人称）・性・数, および完了ないし非完了によって変化する. 三人称男性単数完了形は基本形と呼ばれ, 辞書の見出し語となっている.
+アラビア語はエジプトやシリアをはじめ, 20以上の国および地域で公用語となっている. 話者総人口はおよそ3億人にものぼると言われ, 6つある国連公用語の1つにも数えられる. またアラビア語はイスラム教の原典であるコーランの言語であり, 全世界およそ16億人 のイスラム教徒が存在することを考慮に入れると, 実に世界人口の5人に1人がアラビア語と関わりを持っていることとなる. 
 
 またアラビア語はコーランや古典文学を基盤とし, 現在では新聞やニュースなどで用いられる正則アラビア語（フスハー）と, 各地域で日常会話において用いられる口語アラビア語（アンミーヤ）に大別される. 正則アラビア語はアラブ世界での共通語として認識されているが, どこかの国および地域における母語というわけではなく, アラビア語母語話者自体も主に公教育の場で学ぶものである. つまり, 教育を受けたアラブ人は, 自身の生まれた土地で話される口語アラビア語と, 学校で学んだ正則アラビア語の両方を理解している. このよう状態は, 二重言語性と呼ばれる. 現在の日本におけるアラビア語教育は正則アラビア語が主であるため, 本論で目的とした検索サイトの構築も正則アラビア語を対象としている. 本稿で「アラビア語」は, 「正則アラビア語」のことを指す. 
 
-\subsection{アラビア語の語根}
+\subsection{アラビア語の言語的特徴}
+アラビア語は, アフロ・アジア語族のセム語派に属する屈折語である. 文字はアラビア文字を用い, 右から左に向かって記述する一方, 数字は逆に右から左に記述される. 28の子音が存在し, 中でも咽頭化ないし軟口蓋音化した子音が特徴的である. 母音は/a/, /i/, /u/の短母音とそれぞれの長母音、また/ai/, /au/などの二重母音が弁別される. 文構造はVSO型が基本だが, SVO型を取ることも多い. 名詞と形容詞は格（主格, 属格, 体格）・性（男性, 女性）・数（単数, 双数, 複数）によって変化し、定冠詞によって限定と非限定が区別される。また複数形には規則形が存在するが, 不規則変化するものが多数である. 動詞は人称（一人称, 二人称, 三人称）・性・数, および完了と非完了によって変化する. 三人称男性単数完了形は基本形と呼ばれ, 辞書の見出し語となっている.
+
 アラビア語のほとんどの語彙は, 3つの子音から成り立っている. 3つの子音の組み合わせはそれぞれに根源的な意味を持っており, 同じ3つの子音から成る語彙は意味に関連性を持っている. この3つの子音の組み合わせのことを「語根」という. 
 
 例えば, 「KāTiB」は「作家」を意味し, 「KiTāB」は「本」を意味する. 両単語の語根は「KTB」であり, これは「書くこと」にまつわる語根である. ここで注意したいのは, 語根はその並べ方まで含めたものであり, 語根「KTB」は, 「BKT」や「KBT」 とは異なるということだ. 厳密に言えば, 3子音の組み合わせではなく, 3子音の順列であると言える. また稀に2子音や4子音の語根も存在する. 
 
-\subsection{辞書作成時の問題点}
-\subsubsection{語根配列}
+subsection{日本におけるアラビア語学習環境}
+
+\section{アラビア語辞書検索システムの構築}
+\subsection{基本形・語根による検索}
+\subsubsection{語根からの検索}
 伝統的にアラビア語の辞書では, 語根配列が採用されてきた. 上記の例で言えば, 「KāTiB」と「KiTāB」はともに辞書の「KTB」のグループにまとめられ, その見出し語として収録される. 今まで五十音順の日本語辞書, アルファベット順の英語辞書しか使ったことのない学生にとって, 語根配列のアラビア語辞書に慣れるまでにはかなりの時間がかかる. 語根配列の辞書を使用するためには, 調べたいと思っている単語の語根を判別する必要性があるからだ. この作業にはそれ相応の文法力が必要とされる. 
 
 「maKTaBat」を辞書で引く場合, 「m」と「t」がそれぞれ語根ではなく, 派生語を作るための接辞であると見抜けなければならない. これは簡単な例であるが, 語根の中には派生された語彙において子音の一部が脱落したり, 変化したりするものがある. これらは例外として扱われるが, 例外ほど使用頻度が高いのというのが言語の常であり, アラビア語学習において骨の折れる部分である. 
@@ -108,20 +108,18 @@ p\LaTeXe\ class file, typesetting
 以下のテンプレートに従って記述してください．
 原稿執筆に際しては，本クラスファイルとともに配布される
 
-\subsubsection{アフベット配列}
+\subsubsection{基本形からの検索}
 語根配列の辞書がある一方で, 英語やフランス語などの辞書で採用されているアルファベット配列の辞書も存在する. こちらの場合, 調べたい語彙の語根を判別できる文法能力は必要とならないため, 初級学習者にとっては使い勝手がよいというメリットがある. 「NWM」のように派生語において語根の一部が, 欠落および変化してしまう語彙も, 単純にそのままの形で調べれば良いだけである. しかし一点注意しなければいけないことがある. 動詞は基本形, 名詞・形容詞は単数形が見出し語となっているため, 調べたい語彙が動詞の活用形だった場合や, 名詞・形容詞の複数形だった場合, それらを基本形ないし単数形に戻す文法力が必要であるということだ. 
 
 上記の例であれば, 「KuTTāB」は「KāTiB」に, 「KuTuB」は「KiTāB」に戻さなければ辞書を引くことはできない. 複数形が規則変化するものである場合, 複数形から単数形を復元することはさして難しくないため, アルファベット配列の辞書ですぐに調べることができる. しかし例に挙げた名詞のように複数形が不規則変化するものの場合, 辞書を引くのは当然それらが学習者にとって初見の時であるため, 複数形から単数形を復元するのは不可能に近く, 辞書を引くことは難しくなる. このような場合には, むしろ語根辞書の方が意味を調べることに適しているといえる. 
 
-\subsubsection{辞書配列の検討}
+\subsubsection{検索方法の検討}
 語根配列の辞書とアルファベット配列の辞書にはそれぞれに長所と短所があり, 目的や状況に応じて使い分けることが理想的である. 紙の辞書ではどちらか一方の配列しか採用できないため, 2冊必要となってしまう. 他方, 電子媒体の辞書であれば両方を採用することができる. しかしどちらも利用できるということは, 同時にどちらか一方のみを利用し続けることを可能にしてしまう. アルファベット配列のみを利用し続けることは, 学習者の文法力養成の妨げとなる可能性も高い. アラビア語辞書において伝統的に語根配列が採用されてきたことは, 語根に対する理解がアラビア語学習において非常に重要であるからに他ならない. 
 
-しかし榮谷\cite{sakaedani2008}も指摘するように, あまりに語根を偏重すれば, 辞書を引く能力を養うのと引き換えに, かえって語彙を覚える時間が取れないといった本末転倒な事態を招きかねない. アルファベット配列のように, 辞書の見出し語から語彙を調べられることは初級学習者にとって利便性が高い. 本研究で構築する検索サイトの対象は初級学習者であるため, アルファベット配列を採用することに関しては問題ないだろう. しかし, 関連する語彙が一覧できるなど語根配列によって得られるメリットも多い. 事実, 次章の学生アンケートの結果からもわかるように, 8割近い学生が語根配列の必要性を感じている. 初級学習者であっても目的に応じて使い分けられるよう, 検索サイトでは見出し語検索と語根検索の両方を採用することとした. 同時に収録語彙数に制限を設けた. これは初級学習者が見出し語検索を過度に利用するあまり, 語根に対する理解力をいつまでも身につけられずに学習が進んで行くことを避けるためである. 初級段階の学習を終えた後は, 既存の辞書へ利用を移行して行くことを想定している. 
+しかし榮谷\cite{sakaedani2008}も指摘するように, あまりに語根を偏重すれば, 辞書を引く能力を養うのと引き換えに, かえって語彙を覚える時間が取れないといった本末転倒な事態を招きかねない. アルファベット配列のように, 辞書の見出し語から語彙を調べられることは初級学習者にとって利便性が高い. 本研究で構築する検索サイトの対象は初級学習者であるため, アルファベット配列を採用することに関しては問題ないだろう. しかし, 関連する語彙が一覧できるなど語根配列によって得られるメリットも多い. 事 初級学習者であっても目的に応じて使い分けられるよう, 検索サイトでは見出し語検索と語根検索の両方を採用することとした. 同時に収録語彙数に制限を設けた. これは初級学習者が見出し語検索を過度に利用するあまり, 語根に対する理解力をいつまでも身につけられずに学習が進んで行くことを避けるためである. 初級段階の学習を終えた後は, 既存の辞書へ利用を移行して行くことを想定している. 
 
-\section{検索サイト概要}
-\subsection{要求仕様}
-\subsection{収録語数}
-2. 3. 3項で, 検索サイトの配列を検討し, さらに語彙に制限を設けることとした. ここでは初学者向けの検索サイトとしてどれだけの語彙を収録すべきか検討する.
+\subsection{アラビア語辞書データ}
+2. 3. 3項で, 検索サイトの配列を検討した結果、語彙に制限を設けることとした. ここでは初学者向けの検索サイトとしてどれだけの語彙を収録すべきか検討する.
 
 \subsubsection{語彙の大きさ}
 第二言語習得においてどれだけの語彙量を目標にすべきかに関して, Nation [3]は語彙の頻度に注目することを1つの方法として挙げている. 彼は英語ネイティブスピーカーの中等学校教科書を例に, 最も頻度の高い2000語でテキストの87%, さらにUniversity word list を加えた2800語でテキストの95%をカバーしていると示している. この結果は英語に限られるものであり, 他言語にも同じように頻度とテキストカバー率の関係を当てはめて考えることは軽率と言わざるを得ない. 
@@ -147,3 +145,5 @@ I.S.P.Nation, Teaching and Learning Vocabulary, Heinle\&Heinle, 1990.
 Tim Buckwalter  Parkinson Dilworth, A Frequency Dictionary of Arabic: Core Vocabulary for Learners, Routledge, 2009.
 
 \end{thebibliography}
+
+\end{document}
