Add url package

--- a/tecrep.tex
+++ b/tecrep.tex
@@ -8,6 +8,7 @@
 \usepackage{latexsym}
 %\usepackage[fleqn]{amsmath}
 %\usepackage{amssymb}
+\usepackage[dvipdfmx]{hyperref}
 
 \def\IEICEJcls{\texttt{ieicej.cls}}
 \def\IEICEJver{3.0}
@@ -69,7 +70,7 @@ KTB：書くことにまつわる語根
 
 KaTibun：作家
 
-一方で, 近年日本においてもアラブ世界に対しては多大なる社会的関心が寄せられてきた. 2001年の「9. 11」, 2003年からの「イラク戦争」, 2010年からは「アラブの春」, 翌年には「シリア内戦」の勃発, また「イスラム国」によるテロの脅威は現在も続いており, 2014年にはシリアのアレッポで日本人2名が拘束されるという事件があったことも記憶に新しい. またアラブ世界との経済的結びつきも無視するとはできない。原油のほとんどを輸入に頼っている日本だが, その輸入先第1位がサウジアラビア, 第2位がアラブ首長国連邦, 両国からの輸入量を合わせると実に全体の約6割\footnote{帝国書院　https://www.teikokushoin.co.jp/statistics/map/index16.html}を占めることとなる. また日本企業の湾岸地域への進出も盛んである. 日本貿易振興機構が調査を始めた2005年から2014年の間に, アラブ首長国連邦にある日系企業拠点数は2倍以上の431事業所にまで増加している. 2020年にはドバイでの万国博覧会の開催が決定しており, 湾岸地域はこれからますます経済的盛り上がりをみせると予想される. 
+一方で, 近年日本においてもアラブ世界に対しては多大なる社会的関心が寄せられてきた. 2001年の「9. 11」, 2003年からの「イラク戦争」, 2010年からは「アラブの春」, 翌年には「シリア内戦」の勃発, また「イスラム国」によるテロの脅威は現在も続いており, 2014年にはシリアのアレッポで日本人2名が拘束されるという事件があったことも記憶に新しい. またアラブ世界との経済的結びつきも無視するとはできない。原油のほとんどを輸入に頼っている日本だが, その輸入先第1位がサウジアラビア, 第2位がアラブ首長国連邦, 両国からの輸入量を合わせると実に全体の約6割\footnote{帝国書院　\url{https://www.teikokushoin.co.jp/statistics/map/index16.html}}を占めることとなる. また日本企業の湾岸地域への進出も盛んである. 日本貿易振興機構が調査を始めた2005年から2014年の間に, アラブ首長国連邦にある日系企業拠点数は2倍以上の431事業所にまで増加している. 2020年にはドバイでの万国博覧会の開催が決定しており, 湾岸地域はこれからますます経済的盛り上がりをみせると予想される. 
 
 このような事情を反映し, 日本でのアラビア語の学習需要も高まりつつある. 東京外国語大学では, 2012年にアラビア語専攻の学生の募集定員が15名から30名へと増加した. また防衛省において2011年よりアラビア語圏への留学派遣が開始されたことも、同様の事情からと推測される. アラビア語を扱える人材の育成は進んでいない. 学習環境の整った教育機関はいまだ数が少なく, アラビア語を専門的に学習できる教育過程が存在している大学は, 東京外国語大学と大阪大学のみである. 
 
