Change package from hypered to url

--- a/tecrep.tex
+++ b/tecrep.tex
@@ -8,7 +8,8 @@
 \usepackage{latexsym}
 %\usepackage[fleqn]{amsmath}
 %\usepackage{amssymb}
-\usepackage[dvipdfmx]{hyperref}
+%\usepackage[dvipdfmx]{hyperref}
+\usepackage{url}
 
 \def\IEICEJcls{\texttt{ieicej.cls}}
 \def\IEICEJver{3.0}
@@ -117,13 +118,16 @@ subsection{日本におけるアラビア語学習環境}
 \subsubsection{検索方法の検討}
 語根配列の辞書とアルファベット配列の辞書にはそれぞれに長所と短所があり, 目的や状況に応じて使い分けることが理想的である. 紙の辞書ではどちらか一方の配列しか採用できないため, 2冊必要となってしまう. 他方, 電子媒体の辞書であれば両方を採用することができる. しかしどちらも利用できるということは, 同時にどちらか一方のみを利用し続けることを可能にしてしまう. アルファベット配列のみを利用し続けることは, 学習者の文法力養成の妨げとなる可能性も高い. アラビア語辞書において伝統的に語根配列が採用されてきたことは, 語根に対する理解がアラビア語学習において非常に重要であるからに他ならない. 
 
-しかし榮谷\cite{sakaedani2008}も指摘するように, あまりに語根を偏重すれば, 辞書を引く能力を養うのと引き換えに, かえって語彙を覚える時間が取れないといった本末転倒な事態を招きかねない. アルファベット配列のように, 辞書の見出し語から語彙を調べられることは初級学習者にとって利便性が高い. 本研究で構築する検索サイトの対象は初級学習者であるため, アルファベット配列を採用することに関しては問題ないだろう. しかし, 関連する語彙が一覧できるなど語根配列によって得られるメリットも多い. 事 初級学習者であっても目的に応じて使い分けられるよう, 検索サイトでは見出し語検索と語根検索の両方を採用することとした. 同時に収録語彙数に制限を設けた. これは初級学習者が見出し語検索を過度に利用するあまり, 語根に対する理解力をいつまでも身につけられずに学習が進んで行くことを避けるためである. 初級段階の学習を終えた後は, 既存の辞書へ利用を移行して行くことを想定している. 
+しかし榮谷\cite{sakaedani2008}も指摘するように，あまりに語根を偏重すれば, 辞書を引く能力を養うのと引き換えに，かえって語彙を覚える時間が取れないといった本末転倒な事態を招きかねない．
+アルファベット配列のように, 辞書の見出し語から語彙を調べられることは初級学習者にとって利便性が高い.
+本研究で構築する検索サイトの対象は初級学習者であるため, アルファベット配列を採用することに関しては問題ないだろう.
+しかし, 関連する語彙が一覧できるなど語根配列によって得られるメリットも多い. 事 初級学習者であっても目的に応じて使い分けられるよう, 検索サイトでは見出し語検索と語根検索の両方を採用することとした. 同時に収録語彙数に制限を設けた. これは初級学習者が見出し語検索を過度に利用するあまり, 語根に対する理解力をいつまでも身につけられずに学習が進んで行くことを避けるためである. 初級段階の学習を終えた後は, 既存の辞書へ利用を移行して行くことを想定している. 
 
 \subsection{アラビア語辞書データ}
 2. 3. 3項で, 検索サイトの配列を検討した結果、語彙に制限を設けることとした. ここでは初学者向けの検索サイトとしてどれだけの語彙を収録すべきか検討する.
 
 \subsubsection{語彙の大きさ}
-第二言語習得においてどれだけの語彙量を目標にすべきかに関して, Nation [3]は語彙の頻度に注目することを1つの方法として挙げている. 彼は英語ネイティブスピーカーの中等学校教科書を例に, 最も頻度の高い2000語でテキストの87%, さらにUniversity word list を加えた2800語でテキストの95%をカバーしていると示している. この結果は英語に限られるものであり, 他言語にも同じように頻度とテキストカバー率の関係を当てはめて考えることは軽率と言わざるを得ない. 
+第二言語習得においてどれだけの語彙量を目標にすべきかに関して, Nation [3]は語彙の頻度に注目することを1つの方法として挙げている. 彼は英語ネイティブスピーカーの中等学校教科書を例に, 最も頻度の高い2000語でテキストの87\%, さらにUniversity word list を加えた2800語でテキストの95\%をカバーしていると示している. この結果は英語に限られるものであり, 他言語にも同じように頻度とテキストカバー率の関係を当てはめて考えることは軽率と言わざるを得ない. 
 
 しかしTim Buckwalter・Dilworth Parkinson [4]が, 語彙学習において頻度を1つの指標とした際, 多くの場合学習者の利益となる語彙表を得られると述べているように, 頻度が重要な指標となることは間違いない. とりわけ「初級学習者がまず学ぶべき語彙を提示する」という条件のもとでは, 非常に効果的だと考えられる.
 
@@ -133,11 +137,11 @@ subsection{日本におけるアラビア語学習環境}
 辞書データは「大学のアラビア語 初級表現」, 巻末収録の単語帳の2081単語を基礎としている. 本学アラビア語専攻の教授陣が2013年度以降出版している「大学のアラビア語」シリーズは, 東京外国語大学で培われてきたアラビア語教育の集大成とも言えるものであり, 教科書としての質が高い. これらのテキストにある語彙を集めた単語帳は, 日本語の意味も入念に選別されている. これらの語彙と, 3000万語規模のコーパスから頻度上位5000語を抽出した「a frequency dictionary of Arabic」の上位2000語を照らし合わせ, 前者には含まれないが後者には含まれる818語を追加した, 全2909語を見出し語として収録している. 2081語から漏れた語彙に関しては「パスポート初級アラビア語辞典」および「Arabic English Dictionary of Modern Written Arabic」を参照した. 例文およびコロケーションに関しては, 「TUFS言語モジュール 」にアップロードされている約2000文を収録した.
 
 \begin{thebibliography}{99}
-\bibitem{wachimi2016}
+\bibitem{washimi2016}
 鷲見朗子 鷲見克典, 日本の高校と大学におけるアラビア語の教育と学習者, アラブ・イスラム研究(14), pp.103-121, 2016.
 
 \bibitem{sakaedani2008}
-榮谷温子, アラビア語辞典の語根順配列とアルファベット順配列 語彙習得の観点から, 外国語教育研究(11), pp.90-100, 2008.
+榮谷温子, アラビア語辞典の語根順配列とアルファベット順配列語彙習得の観点から, 外国語教育研究(11), pp.90-100, 2008.
 
 \bibitem{heinle1990}
 I.S.P.Nation, Teaching and Learning Vocabulary, Heinle\&Heinle, 1990. 
