--- a/tecrep.tex
+++ b/tecrep.tex
@@ -71,16 +71,15 @@ KTB：書くことにまつわる語根
 
 KaTibun：作家
 
-一方で, 近年日本においてもアラブ世界に対しては多大なる社会的関心が寄せられてきた. 2001年の「9. 11」, 2003年からの「イラク戦争」, 2010年からは「アラブの春」, 翌年には「シリア内戦」の勃発, また「イスラム国」によるテロの脅威は現在も続いており, 2014年にはシリアのアレッポで日本人2名が拘束されるという事件があったことも記憶に新しい. またアラブ世界との経済的結びつきも無視するとはできない。原油のほとんどを輸入に頼っている日本だが, その輸入先第1位がサウジアラビア, 第2位がアラブ首長国連邦, 両国からの輸入量を合わせると実に全体の約6割\footnote{帝国書院　\url{https://www.teikokushoin.co.jp/statistics/map/index16.html}}を占めることとなる. また日本企業の湾岸地域への進出も盛んである. 日本貿易振興機構が調査を始めた2005年から2014年の間に, アラブ首長国連邦にある日系企業拠点数は2倍以上の431事業所にまで増加している. 2020年にはドバイでの万国博覧会の開催が決定しており, 湾岸地域はこれからますます経済的盛り上がりをみせると予想される. 
+一方で, 近年日本においてもアラブ世界に対しては多大なる社会的関心が寄せられてきた. 2001年の「9. 11」, 2003年からの「イラク戦争」, 2010年からは「アラブの春」, 翌年には「シリア内戦」の勃発, また「イスラム国」によるテロの脅威は現在も続いており, 2014年にはシリアのアレッポで日本人2名が拘束されるという事件があったことも記憶に新しい. またアラブ世界との経済的結びつきも無視するとはできない. 原油のほとんどを輸入に頼っている日本だが, その輸入先第1位がサウジアラビア, 第2位がアラブ首長国連邦, 両国からの輸入量を合わせると実に全体の約6割\footnote{帝国書院　\url{https://www.teikokushoin.co.jp/statistics/map/index16.html}}を占めることとなる. また日本企業の湾岸地域への進出も盛んである. 日本貿易振興機構が調査を始めた2005年から2014年の間に, アラブ首長国連邦にある日系企業拠点数は2倍以上の431事業所にまで増加している. 2020年にはドバイでの万国博覧会の開催が決定しており, 湾岸地域はこれからますます経済的盛り上がりをみせると予想される. 
 
-このような事情を反映し, 日本でのアラビア語の学習需要も高まりつつある. 東京外国語大学では, 2012年にアラビア語専攻の学生の募集定員が15名から30名へと増加した. また防衛省において2011年よりアラビア語圏への留学派遣が開始されたことも、同様の事情からと推測される. アラビア語を扱える人材の育成は進んでいない. 学習環境の整った教育機関はいまだ数が少なく, アラビア語を専門的に学習できる教育過程が存在している大学は, 東京外国語大学と大阪大学のみである. 
+このような事情を反映し, 日本でのアラビア語の学習需要も高まりつつある. 実際東京外国語大学では, 2012年にアラビア語専攻の学生の募集定員が15名から30名へと増加された. また防衛省において2011年よりアラビア語圏への留学派遣が開始されたことも、同様の事情からと推測される. 
 
-教育機関と同様に, アラビア語学習教材も量質ともに充実しているとは言い難い状況にある. 特に辞書においては顕著であり, 現在広く流通しているアラビア語日本語辞書は4冊程度しかない. しかし, それらも決して辞書として十分なものとは言えない. 本学アラビア語専攻で長らく英語訳辞書である「Arabic English Dictionary of Modern Written Arabic」の使用が推奨されてきたことも, このような事情を反映している.
+しかし、日本でのアラビア語学習環境はいまだ整っていない。現在日本の高等教育機関でアラビア語を学習する人口のほとんどが初級レベルにあるが、初学者用の辞書は数が少なく、「パスポート 初級アラビア語辞典」が存在するのみである。しかしこの紙媒体の辞書であるために基本形からしか辞書引きできないため、語根を用いた検索による学習効果が期待できない。
 
-鷲見榮谷\cite{washimi2016}らの報告によると、大学でアラビア語を学習する学生のほとんどは入門・初級レベルにある。こうのような背景を考慮すると, 現状最も需要の高い学習教材は遠隔で利用可能な初級学習者向けのものではないかと考えられる. 初級学習者向けの学習教材は, まず大学でアラビア語科目を受講する学生からの需要があり, またアラビア語を学習できる環境が周囲になく, アラビア語を独学するひとの需要にも適う.
+一方、これらの問題を解決した電子媒体の辞書は存在するものの、初学者向けに意味の厳選されていない点や、スマートフォンでの利用に特化されていないなどの問題がある。
 
-本稿では, アラビア語学習教材の中でもとりわけ語彙学習に焦点を当てる. 初級学習者用を銘打っているアラビア語日本語辞書としては、「パスポート初級アラビア語辞典」がのみが存在している。しかし、紙媒体であるために2. 3節以降で詳しく述べる配列に関する問題を抱えている.
-1. 2節でみたアラビア語教育の現状を考慮すれば, より安価で手軽に利用できる日本語アラビア語辞書をつくるは急務である. 
+本研究では、東京外国語大学から出版されている「『大学のアラビア語』』単語帳」および「A Frequency Dictionary of Arabic」のデータを用いて、辞書検索サイトを構築した。これにより辞書サイトに登録する語彙を初学者に最適化させることに可能にした。
 
 \section{アラビア語について}
 アラビア語はエジプトやシリアをはじめ, 20以上の国および地域で公用語となっている. 話者総人口はおよそ3億人にものぼると言われ, 6つある国連公用語の1つにも数えられる. またアラビア語はイスラム教の原典であるコーランの言語であり, 全世界およそ16億人 のイスラム教徒が存在することを考慮に入れると, 実に世界人口の5人に1人がアラビア語と関わりを持っていることとなる. 
